--- a/obsidian vault/Runes&Rails/Этерисы/Новарион.md
+++ b/obsidian vault/Runes&Rails/Этерисы/Новарион.md
@@ -1,13 +1,50 @@
-Первый Этерис
+Первенец **Хару**. Мрачный безликий Этерис пустот энда. 
+Обитает в самых дальних краях и, на первый взгляд бесцельно прохаживаясь по кольцам измерения, молча наблюдает за тем, как медленно преобразовывается край от его присутствия. Окружающая среда, а также строение глаз обитателей колец не позволяет им лицезреть своего творца, независимо от формы оного, поэтому в своей пустоте опасаться ему нечего и некого. После разделения Этериса на 2 части, эндермены стали способствовать растлению мира, т.к. таким образом, смогут восстановить его силу. Голос его уникален: он расположен во всём спектре звуковых частот, плавно переходя от инфразвука в ультразвук и обратно.
 
 [[Домены#Новарион]]
+
+---
 # Стремление
 Формулировка - "Ищи и создавай музыку из космоса"
 Предмет - Стремление Забытого - сильный меч, который при ударе накладывает [[эффект Проклятие Изгнания]]. 
+
+Известно, что одна из целей Новариона – поддерживать свою оставшуюся в мире половину, сдерживающую незер и эзер. Известно также, что Этерис пытается убрать все возможности пробраться в энд, например, посылая своих странников искать и уничтожать порталы. Дракон, сторожащий самое сердце края, также был создан Новарионом, что не помешало ему (дракону) начать вражду с эндерменами.
+
+Скалк также был создан благодаря Новариону, но случайно.
+
+Вериты, созданные или зараженные из его пустоты, постепенно теряют смысл и цель в жизни, поддаваясь апатии.
+
+---
 # Черты характера
-=пояснение: не только сухие черты характера, но и информация по типу "чем увлечен", "чем озабочен", "что вызывает недовольство" и тд
+1. НЕ ИМЕЕТ ЧЁТКО ВЫРАЖЕННОГО ХАРАКТЕРА - использует различные характеры исходя из ситуации, но даже так характеры выражаются крайне слабо.
+2. Любит огромные размеры всего.  
+3. Будучи очень разборчивым, по-настоящему Новарион любит лишь две вещи: наблюдать и слушать, но наслаждение он получает лишь от процесса действий. 
+4. Считает, что каждый должен иметь свободу воли.
+5. Что вызывает недовольство: Манипуляции, абсолютный порядок, вмешательство в энд, легкомысленность, глупость. Очень не любит громкую музыку и шум.
+6. Озабочен подержанием стабильности между хаосом и порядком в мире. При этом придерживается своего особого кодекса чести, из-за чего он не хочет явно вмешиваться в происходящее в мире. 
+7. Из-за того, что Новарион слишком много всего "допускает", это складывается в противоречии в его мыслях и действиях, что очень сбивает его с толку.
+---
 # Роль в сюжете
-=пояснение: для чего был создан Хару и как ведёт себя после начала его болезни
+В зависимости от ситуации в мире неявно помогает либо возродить Хару, либо убить его.
+
+---
 # Отношение к другим
-=пояснение: отношение к Хару, к каждому другому Этерису и к Веритам
+- **Агнар**, **Брут** – «Бесящий шум и гром». Абсолютное непринятие и нетерпение. Их музыка воспринимается Новарионом как очень громкий и раздражающий шум. Самих же братьев считает опасными в своих действиях для своей тишины и мира
+
+- **Сурги** – «Обжигающее солнце». С интересом воспринимается этерис, способный творить жизнь, сопротивляющуюся тлению пустоты. В целом, отношение более чем нейтральное.
+
+- **Лурги** – «Теплый лунный свет». Этерису пустоты флора симпатичнее фауны, поэтому способность Лурги взращивать целые леса вызывает у него уважение. Также Новариону нравится луна.
+
+- **Ариса** – «Манящий хаос». К сестре относится сдержано, с опаской, стараясь не давать ей возможностей манипулировать собой. Также Новарион несёт груз вины за заражение её и, следовательно, заражение мира монстрами.
+
+- **Мардук** – «В законе есть место и для Пустоты». Нейтральное и спокойное отношение к классической музыке Мардука. Не собирается беспрекословно повиноваться, но и мешать его планам не станет...
+
+- **Хару** – «Услышь меня, создатель». Новарион уважал создателя. Поддерживает возрождение и готов незримо помогать, оставляя пути к отступлению, но, если решит, что это нанесёт непоправимый ущерб миру, сразу же откажется и станет также незримо мешать остальным. В критической ситуации готов вмешаться по полной.
+
+- **Вериты** – Новарион считает, что излишняя его помощь может стать губительной для веритов и мира, поэтому, помогает им только через предметы и эффекты. Веритов, попавших в энд, он всячески старается оттуда спровадить.
+---
 # Прочее
+Референсы:
+	
+Саунды:
+	
