--- a/obsidian vault/Runes&Rails/Этерисы/Агнар.md
+++ b/obsidian vault/Runes&Rails/Этерисы/Агнар.md
@@ -2,7 +2,7 @@
 
 [[Домены#Агнар]]
 # Стремление
-Формулировка - "Построй мир, который не будет колебаться, будь твёрдым, как он"
+Формулировка - **"Построй мир из камня космоса, будь твёрдым, как он, пусть твой мир будет крепким бастионом"**
 Предмет - Стремление Гиганта - сильная кирка, на ПКМ превращает некаменные блоки в радиусе в камень, камень превращает с шансом в руду или в магму, магму с шансом превращает в бедрок. 
 # Черты характера
 =пояснение: не только сухие черты характера, но и информация по типу "чем увлечен", "чем озабочен", "что вызывает недовольство" и тд
