--- a/obsidian vault/Runes&Rails/Этерисы/Ариса.md
+++ b/obsidian vault/Runes&Rails/Этерисы/Ариса.md
@@ -2,7 +2,7 @@
 
 [[Домены#Ариса]]
 # Стремление
-Формулировка - "Управляй своими ближними, пускай они будут спокойны и повинны, будь силой контроля"
+Формулировка - **"Управляй своими ближними, пускай они будут спокойны и повинны, будь силой контроля"**
 Предмет - Стремление Королевы - артефакт-кольцо, при ПКМ вызывает 3(?) визеров, которые атакуют и разрушают всё, но не трогают хозяина. 
 # Черты характера
 =пояснение: не только сухие черты характера, но и информация по типу "чем увлечен", "чем озабочен", "что вызывает недовольство" и тд
