--- a/obsidian vault/Runes&Rails/Этерисы/Брут.md
+++ b/obsidian vault/Runes&Rails/Этерисы/Брут.md
@@ -2,7 +2,7 @@
 
 [[Домены#Брут]]
 # Стремление
-Формулировка - "..."
+Формулировка - **"Совершенствуй всех вокруг себя, исправляй их недостатки, даже если они этого не переживут, перековывай слабых, закаляй сталь"**
 Предмет - Стремление ... - ...
 # Черты характера
 =пояснение: не только сухие черты характера, но и информация по типу "чем увлечен", "чем озабочен", "что вызывает недовольство" и тд
