--- a/obsidian vault/Runes&Rails/Этерисы/Лурги.md
+++ b/obsidian vault/Runes&Rails/Этерисы/Лурги.md
@@ -3,7 +3,7 @@
 [[Домены#Лурги]]
 # Стремление
 одно на двоих с [[Сурги]]
-Формулировка - "Будь живой силой, пускай твои творения меняют мир вокруг, постоянно, циклично, чтобы он жил"
+Формулировка - **"Будь живой силой, пускай твои творения меняют мир вокруг, постоянно, циклично, чтобы он жил"**
 Предмет - Стремление Волхвов - броня-нагрудник(?), которое делает положительные баффы бесконечными, а негативные баффы заканчивает моментально. 
 # Черты характера
 =пояснение: не только сухие черты характера, но и информация по типу "чем увлечен", "чем озабочен", "что вызывает недовольство" и тд
