--- a/obsidian vault/Runes&Rails/Этерисы/Мардук.md
+++ b/obsidian vault/Runes&Rails/Этерисы/Мардук.md
@@ -2,7 +2,7 @@
 
 [[Домены#Мардук]]
 # Стремление
-Формулировка - "..."
+Формулировка - **"Сотвори род Веритов, чтобы они заполнили своей душой мои раны, пусть они станут моим лекарством, когда наберут силы"**
 Предмет - Стремление ... - ...
 # Черты характера
 стоик(он не невосприимчив к эмоциям, и он не холоден, но вывести его из себя сложно; Леопольд?!), тех кто ему безразличен использует как инструменты для реализации своих целей (хотя так может показаться и с теми, кто ему не безразличен, но поверьте им он «даёт» намного больше, чем «берёт»), всегда честен(от того он старается продумать диалог наперёд)
