--- a/obsidian vault/Runes&Rails/Этерисы/Новарион.md
+++ b/obsidian vault/Runes&Rails/Этерисы/Новарион.md
@@ -5,7 +5,7 @@
 
 ---
 # Стремление
-Формулировка - "Ищи и создавай музыку из космоса"
+Формулировка - **"Ищи и создавай музыку из космоса"**
 Предмет - Стремление Забытого - сильный меч, который при ударе накладывает [[эффект Проклятие Изгнания]]. 
 
 Известно, что одна из целей Новариона – поддерживать свою оставшуюся в мире половину, сдерживающую незер и эзер. Известно также, что Этерис пытается убрать все возможности пробраться в энд, например, посылая своих странников искать и уничтожать порталы. Дракон, сторожащий самое сердце края, также был создан Новарионом, что не помешало ему (дракону) начать вражду с эндерменами.
