ФРАКЦИИ (НАКОНЕЦ-ТО)
Две с половиной недели херни

--- a/obsidian vault/Runes&Rails/Глоссарий.md
+++ b/obsidian vault/Runes&Rails/Глоссарий.md
@@ -6,9 +6,18 @@
 **Эрозия** - процесс "утихания", "износа", "выцветания" или "старения" фоноса, когда его гамма постепенно сводится к нейтральной. Объясняется энтропией. Все фоносомики подвержены эрозии со временем, фонос-существа ускоряют свою эрозию, когда расходуют силы на манипуляции фоносом и веществом. Финалом эрозии является образование хрусталя. 
 **Хрусталь** - особый камень, который образуется в естественной природе путем концентрации фоноса с самой нейтральной и, соответственно, податливой для изменения гаммой. Фонос-существа могут использовать хрусталь для невероятных творений, ритуалов, усиления себя или замедления эрозии. [Хрусталь имеет чистейший звук](https://zvukipro.com/predmet/808-zvuki-hrustalja.html). *Премиум-валюта сервера, опыт тоже является Хрусталём*
 **[[Хару]]** - главный герой всего сюжета, центральная личность всего мира. Неудавшийся творец, отдавший всего себя на своё творение. Является фонос-существом, гигантской в масштабах Вселенной фоносомикой, обладающей божественными свойствами, такими как способность к созиданию других фоносомик. Ближе к концу сюжета сильно страдает от эрозии. Его анкером является Гимпанум.
-**[[Гимпанум]]** - космический объект, анкер Хару, сформировавшийся вместе с ним. Выглядит как поле астероидов в планетарной туманности, искаженное наивной фантазией ребёнка. С точки зрения астрофизики является протопланетным диском, сверхмассивным объектом, который должен был сформироваться в солнечную систему, но благодаря фоносомике Хару существует в том виде, в котором есть. Из-за эрозии Хару на Гимпануме встречаются кристаллы хрусталя. На дальней орбите Гимпанума находится планета, включающая в себя Верхний мир, Незер и Эзер
+**[[Гимпанум]]** - космический объект, анкер Хару, сформировавшийся вместе с ним. Выглядит как поле астероидов в планетарной туманности, искаженное наивной фантазией ребёнка. С точки зрения астрофизики является протопланетным диском, сверхмассивным объектом, который должен был сформироваться в солнечную систему, но благодаря фоносомике Хару существует в том виде, в котором есть. Из-за эрозии Хару на Гимпануме встречаются кристаллы хрусталя. Протозвезда в центре Гимпанума называется **Сердце Бога**. Большая часть биомов Гимпанума обладает экстремальными условиями существования, поэтому распространяться жизни там очень сложно.
+**Гатол** - планета на орбите Гимпанума, которую создал Агнар из космических астероидов. Он старается постоянно её увеличивать и наращивать космическим камнем, но стараниями СургиЛурги ему это не удаётся. Включает в себя Верхний мир, Незер и Эзер.
 **Этерисы** - порождённые Хару фонос-существа, уникальные тем, что они полностью *рукотворны*. Их творец закладывал в каждого из них особую идею и предназначение, которое называется стремлением (не всегда у него это получалось так, как хотелось бы), от чего каждый имеет свои особенные силы. Как фоносомики они не настолько огромны, как сам Хару, но при этом достаточно могущественны. Этерисы сами выбирают себе анкер при рождении и могут менять его. *Все существующие этерисы (в порядке старшинства): [[Новарион]], [[Агнар]], [[Сурги]], [[Лурги]], [[Ариса]], [[Брут]], [[Мардук]].*
 **Стремление** - идея, предназначение, цель, суть, которую в Этериса заложил его создатель. Проявляется в виде строгого ограничителя воли - стремление не позволяет Этерису думать о чём угодно и действовать как угодно, если это не приблизит Этериса к осуществлению стремления. Являются, по сути, ментальными оковами. Технически представляют из себя самостоятельную фоносомику, которая вкладывается в Этериса при его создании. Может быть изъята из фонос-тела (не анкера) Этериса, после чего перестанет на него действовать, то есть он станет свободным. Доныне существует два способа избавиться от стремления - позволить Пустоте его выкорчевать или умереть.
-**Утроба** - уникальная в своём роде фоносомика, работающая как автономный завод Веритов. Создана Мардуком при поддержке Сурги и Лурги в самом крупном кристалле хрусталя в Сердце Бога. С некоторой периодичностью порождает Веритов, даёт им тело и выпускает в Гимпанум, откуда они попадают в Верхний мир через инфраструктуру Мардука. Предположительно, имеет зачатки разума и может иметь своё мнение на определённые события.
-**Вериты** - фонос-существа, рождённые в Утробе. Будучи продуктом массового производства, каждый Верит сам находит свою идентичность, но изначальное их предназначение - помочь обратить вспять эрозию Хару. Истинным анкером всех Веритов является Утроба, а их тела - лишь временные вместилища. *Вериты могут быть как НПС, так и игроками.*
-**Пустота** - область пространства за пределами Вселенной и космоса, где кончается любая материя и начинается великое ничто. Пустота по разному воздействует на объекты, в неё попадающие, но все эти воздействия мало изучены. Точно известно, что она пытается освободить Этерисов от их стремлений. Предположительно, имеет зачатки разума и может иметь своё мнение на определённые события.
+**Пустота** - область пространства за пределами Вселенной и космоса, где кончается любая материя и начинается великое ничто. Пустота по разному воздействует на объекты, в неё попадающие, но все эти воздействия мало изучены. Точно известно, что она останавливает эрозию, растворяет Хрусталь и пытается освободить Этерисов от их стремлений. Предположительно, имеет зачатки разума и может иметь своё мнение на определённые события. Новарион заперт в Пустоте и строит там собственное царство, которое, впрочем, никем не населено.
+**Утроба** - уникальная в своём роде фоносомика, работающая как автономный завод Веритов. Создана Мардуком при поддержке СургиЛурги в самом крупном кристалле хрусталя в Сердце Бога. С некоторой периодичностью порождает Веритов, даёт им анкер и выпускает в Гимпанум, откуда они попадают на Гатол через инфраструктуру Мардука. Предположительно, имеет зачатки разума и может иметь своё мнение на определённые события.
+**Вериты** - фонос-существа, рождённые в Утробе. Будучи продуктом массового производства, каждый Верит сам находит свою идентичность, но изначальное их предназначение - накопить фонос и принести себя в жертву чтобы обратить вспять эрозию Хару. Вериты имеют несколько рас, представители которых могут кардинально отличаться.
+**Примо** - первая раса Веритов. Отличаются красивыми рогами, напоминающими корону. Гордые и величественные наследники погибшей империи. Ценят коллективный уклад жизни, когда каждый знает своё место и работает на благо общества. Недолюбливают Этерисов и прочих Веритов, считают себя выше их, что в какой-то степени справедливо за счёт способности бесконечно развивать свои навыки и способности с помощью хрусталя. Не способны к размножению, переживают кризис после катастрофы Скалка, уничтожившей большинство Примо, но мечтают вернуть былое величие.
+**Склавы** - вторая раса Веритов. Внешне похожи на насекомых. Они интроверты, ценят одиночество и комфорт личного пространства. Эмоционально слабо развиты. Смиренно выполняют любую работу, если их базовые потребности обеспечены, но превращаются в безумных берсерков, если не получают минимальных благ какое-то время. Мало приспособлены к креативной работе, предпочитают ручной труд. Размножаются шизогонией (особь распадается на несколько своих копий), но только если наелись хрусталём.
+**Радитажи** - третья раса Веритов. Они имеют черты птиц. Яркие экстраверты, испытывают широкий спектр эмоций и хорошо приспособлены к любой творческой деятельности, будь то наука, ремесло или искусство. Посвящают жизнь одной выбранной идее или цели, свято в неё верят. Любят новые ощущения и предметы роскоши. Часто живут в полигамных семьях, размножаются половым путём. Могут превращать хрусталь в любой предмет, который соответствует их талантам и предпочтениям.
+**Избранные** - особая раса Веритов. В отличие от Примо, Склавов и Радитажей, вышедших из Утробы целыми народами, рождаются там по одиночке. Это делает каждого из них потенциально могущественнее любого другого Верита, даже Примо, так как качественно они намного лучше "изготовлены". Особая техника проекции анкера, которая используется СургиЛурги, даёт Избранным техническое бессмертие, потому что их фонос-тела всегда находятся в Утробе, а при смерти анкера практически сразу создаётся новый. Подношение Хрусталя к Утробе позволяет Избранным развивать в себе различные уникальные способности (не путать с бесконечным увеличением характеристик у Примо). *Все игроки - Избранные Вериты.*
+**Первая Империя** - группа Примо во главе с Астием (один из изгнанников Примо) из числа бывших жителей подземных городов, которые пытаются построить новое государство, подчинив себе прочие народы и их города. Терпеливые экспансионисты, не уважающие никого, кроме своих соплеменников, стремятся к возрождению былого величия. Благодаря ныне мёртвому провидцу Анихилону имперцы знают всё о стремлениях Этерисов и мудро пользуются этим знанием, манипулируя детьми Хару. Ненавидят Новариона за катастрофу Скалка. Знают про эрозию Хару и про то, что должен сделать Мардук, тайно с ним сотрудничают, чтобы в итоге не попасть в число жертв - увеличивают население городов, чтобы приблизить исцеление Хару. Притворяются, что желают лучшего для своих подданых, поэтому развивают города. Верят в Хару, что он сможет даровать им способность к размножению, когда исцелится. Столица Первой Империи - Арстоцка. Городами Империи управляют назначенные способные Примо, называемыми Консулами, в то время как прочие жители городов зовутся Граждане.
+**Зелёный Круг** - общество защитников природы и жизни, созданное двумя Радитажами, Дживан и Ритвик, узревшими поступь Сурги во время любовных утех в лесу. Занимается не только защитой природы на Гатоле, но и распространением её на Гимпануме. Это делается по настоянию СургиЛурги, чтобы Хрусталь Гимпанума перешёл из Хару в животных и растения, и тем самым исцелил его эрозию. Друиды (так называют себя члены Зелёного круга), подобно дроздам, являются по сути санитарами Гимпанума, и это должно постепенно вернуть Хару к жизни, хотя в первую очередь для них важна сохранность Гимпанума. Также они разводят растения и животных в специальных заповедниках.
+**Лиловый Двор** - объединение Веритов, влюблённых в Арису и поклоняющихся ей как Королеве, самой прекрасной и желанной. Основная рабочая сила Двора - Склавы, лишённые покоя из-за любви. Элита Арисы - это Некроманты, Радитажи, освоившие магию и способность создавать нежить. Лиловый Двор выполняет цель Арисы - воскресить Хару как нежить, дабы не дать свершиться апокалипсису. Аметистовый Дворец - столица Арисы, находится в Гимпануме, но храмы Королевы во многом распространены по городам Первой Империи, где Склавы работают под предводительством Некромантом.
+**Огненные Братья** - Агнар и Брут объединились и призвали к себе всех озлобленных и изгнанных из общества Веритов, которые общим именем зовутся Неистовые. Орды Неистовых под руководством Жрецов тренируются в крепостях в Незере и совершают оттуда нападения на города на Гатоле, чтобы посеять ужас в их сердцах. Неистовые живут грабежом и мародёрством, поэтому их экономика развита слабо. Особо выделившиеся воины становятся Гончими и обретают возможность истреблять живность в Гимпануме, чтобы приблизить смерть Хару. Брут хочет помочь Агнару стать лучше, а стать лучше для Агнара - возвести его стремление в абсолют - превратить Гатол в сверхмассивное тело.
