--- a/obsidian vault/Runes&Rails/Хронология.md
+++ b/obsidian vault/Runes&Rails/Хронология.md
@@ -1,13 +1,52 @@
-Эпоха Однородности - всё время от возникновения Вселенной в результате Большого взрыва до появления чего-то интересного. Вселенная состоит из рассеянной материи, вещество формируется в первые звёзды в результате астрофизических процессов. Фонос находится в состоянии "первичного супа", как когда-то было в первых океанах на Земле - фоносомики случайным образом формируются и распадаются, из-за чего ранняя Вселенная наполнена какофонией случайных звуков и простых мелодий.
+Большой взрыв. Вселенная состоит из рассеянной материи. Вещество формируется в первые звёзды в результате астрофизических процессов. Фонос находится в состоянии "первичного супа", как когда-то было в первых океанах на Земле - фоносомики случайным образом формируются и распадаются, из-за чего ранняя Вселенная наполнена какофонией случайных звуков и простых мелодий.
+В один из формирующихся протопланетных дисков с большой концентрацией Хрусталя попала очень удачная фоносомика, которая запустила цепную реакцию кристаллизации и так...
+Родился Хару. Рождение его звучало как песня [Here Come The Sun](https://youtu.be/KQetemT1sWc?si=YZw521sApU6lelpG). Хару долго осматривался по сторонам, слушал Вселенную, вникал в себя, и понял, что ему нравится слушать музыку - но она есть только в момент рождения и смерти сложной или осознанной фоносомики.
+Хару породил Новариона ради музыки, и он звучал как ..., и из-за нечёткого стремления ушёл слишком далеко, попал в Пустоту и осознал себя в ней, когда она лишила его стремления. Но выбраться из Пустоты он не смог - она заперла его в себе.
+Хару породил Агнара, его рождение звучало как [To Be a Dwarf](https://youtu.be/ykqyLX4PUao?si=eqaKz1AoJXZRX0TQ), и он создал из космических камней планету, названную им Гатол.
+Камень и металл Агнара не создавали постоянной и красивой мелодии, поэтому...
+Хару породил СургиЛурги, они звучали как [Cuckoo Song](https://www.youtube.com/watch?v=cbQyFZmuA58) и создали жизнь, бредя по грубой поверхности Гатола. По очереди они идут один по земле в виде волхва, другой по небу в виде светила.
+Сама концепция цикла жизни и смерти противоречила стремлению Агнара, потому что делала камень нетвёрдым, мягким, превращала "мир-крепость" в сад, где ничто не вечно, и он начал борьбу с СургиЛурги. Он обрушивал на них и их творения метеоры и глыбы камня и льда из космоса, погребая растения и животных под землю. Настолько велик пласт камня над ними, что они до сих пор находятся в месте, названном позже Незер. Но СургиЛурги прикрывали мир поверхности плотным небосводом, атмосферой. Метеоры Агнара застревали там и оставались навсегда в виде летающих островов, которые сейчас зовут Эзер.
+Хару породил Арису, чтобы та прекратила войну братьев, и она воткнула в Агнара магическую иглу, которая запрещает заниматься насилием, пускай и не ограничивает прочие агрессивные действия. Борьба прекратилась, наступил мир, но не идиллия. Раздражённый Агнар просто смирился и продолжил спокойно и мирно наращивать Гатол за счёт метеоритов.
+Сурги привык общаться со смертными (Жителями, что близки к животным), но а Лурги пытался общаться с другими Этерисами и даже Хару. Отец плохо понимал попытки общения ввиду своей природы, Агнар не ненавидел младших братьев, хотя не знает, почему воюет с ними, а вот Ариса была доброжелательна. Она и Лурги проводили много времени вместе, наслаждаясь красотой мира. Ариса научила его магии, а он подарил ей драконов.
+Произошла встреча Арисы и посланника Новариона, эндермена, из-за чего она чуть не лишилась стремления, сошла с ума и начала поднимать нежить. Попытка Новариона освободить сиблингов от стремления провалилась.
+Неудовлетворённый своим творением Хару испытывает эрозию, но, не понимая её причин, думает, что это всё от дисгармонии.
+Хару породил Брута, чтобы тот исправил мир, закаляя его трудностями.
+Брут начал открыто вредить миру, населять его опасностями, что понравилось Агнару, потому что это освобождало Гатол от "всего лишнего" в виде жизни, но это вызывало недовольство СургиЛурги, потому что это уничтожало их творения.
+Этерисы разделились на два лагеря и начали "холодную войну": Брут (стремление заставляет его создавать испытания) и Агнар (видит возможность освободить свою землю от "паразитов") против СургиЛурги (не могут допустить смерти живого на земле) и Арисы (должна подавлять конфликты между Этерисами). Хару хотел найти лёгкое решение, но всё стало только хуже. Он чувствует эрозию ещё сильнее и его одолевает страх смерти, проблема конфликта между его детьми отходит на задний план для Хару.
+Хару породил Мардука, дабы тот создал цивилизацию, которая наберёт силу и исцелит собою эрозию Хару через жертву своих фонос-тел (он не может пожертвовать Этерисами потому, что они его творения, а вот на Веритов ему в этом плане плевать).
+Хару уснул.
+Безумная Ариса почувствовала будущую смерть Хару и возмечтала поднять его как нежить, чтобы управлять им, но для этого ей нужно было сперва накопить больше сил и знаний и дождаться смерти Хару.
+Мардук вместе с СургиЛурги создали Утробу в Сердце Бога.
+Утроба породила первый род Веритов, которые сами назвали себя Примо. Брут принялся их атаковать в качестве, но Лурги подсказал способ его победить. В итоге Примо строили множество крепостей под землёй на Гатоле, что удовлетворило Брута и он от них отстал. Примо начали процветать в подземных городах, что понравилось Агнару.
+Мардук старался наладить контакт с Примо, чтобы помочь им в развитии, но те отличились изоляционизмом, агрессивно отвечая на контакты с кем-то кроме Лурги и Агнара. Тогда Мардук обратился к Утробе с просьбой, и она ему помогла...
+Утроба породила Веритов-прислужников со слабой волей. Назвав их Склавы, Мардук направил их на строительство городов и железных дорог. Склавы привлекли внимание Этерисов - Сурги видел их слабость по одиночке но знал, что они сильны вместе, но Брут хотел одного - подавить каждого из них, потому что отсутствие собственной воли было для него главным пороком.
+Ариса увидела, что ей даже не нужно использовать магию для подчинения Склавов - ей достаточно очаровать их своей красотой. Некоторые особо впечатлительные Склавы отказывались от еды и удобств, лишь бы находиться рядом с Арисой и называть её своей Королевой. Она использовала их труд ради накопления своих сил, проведения магических экспериментов и создания нежити, чтобы в будущем воскресить Хару. Так появился Лиловый Двор.
+Иногда появлялись Примо-изгнанники, которые поднимались из городов и порабощали Склавов. Впрочем, те давали отпор, если не получали от новых хозяев достаточный уровень жизни и благ. В ином случае их всё устраивало. Самым успешным из этих Примо стал Астий, властитель Арстоцки.
+После того, как Хару уснул, Брут и Агнар всё время противостояли окружающим, но не друг другу. Удивительным образом они не были врагами, скорее наоборот, истинными братьями. Их цели во многом схожи - очистить мир от "слабых" и от "надоедливых". Их обоих считают всеобщей угрозой, и это их сближает. Вериты начали называть их Огненные братья.
+Склавы, не получавшие блага в течении трёх дней, необратимо теряют свой привычный спокойный характер и становятся буйными и ненавидящими всех, кто сильнее их. Они организуются в неконтролируемые хаотичные бандитские формирования, громят железные дороги, терроризируют население, сжигают дома без какой-либо для себя пользы. Такие Склавы называют себя Неистовыми и мотивируют свои поступки местью обществу, которое их отвергло.
+Утроба породила род эксцентричных Веритов, назвавших себя Радитажами. Они были крайне творческими и способными к наукам и искусствам гедонистами и сразу начали путешествовать по миру, заселять города Склавов, налаживать торговлю между крепостями Примо и создавать культы поклонения разным Этерисам, украшая мир.
+Одним из первых культов стал Зелёный круг - двое влюблённых Радитажей, Дживан и Ритвик, развлекались в лесу, когда увидели ступающего по земле Сурги. Он обратился к ним в дружеской манере, и они пошли с ним, учась его искусству создавать и распространять жизнь. Вскоре к этим двоим присоединились многие другие Радитажи, Склавы и даже некоторые Примо. Все они назвали себя Друидами.
+Радитажи склонны к пороку похоти, и женственная натура Арисы очень сильно "привлекает" многих из них. Присоединившиеся к Лиловому Двору Радитажи быстро обрели талант к созданию нежити, овладели магией и назвались Некромантами. В отличие от Склавов и обычной нежити, они способны к выполнению ответственных заданий, поэтому стали знатью Королевы.
+Даже среди разносторонних Радитажей бывают слишком экстравагантные. Непонятые обществом и осмеянные, находясь на дне, такие Радитажи быстро приходят к поклонению Бруту через боевое испытание в его храме, после чего присоединяются к бандам Неистовых и становятся не просто лучшими бойцами, но и жрецами Огненных братьев.
+Примо-провидец по имени Анихилон настолько развил свои провидческие способности, что узрел всю суть стремлений Этерисов и даже исход смерти Хару - Гимпанум потеряет удерживающий его "скелет" в виде фонос-тела бога и сколлапсирует в полноценную звезду, что уничтожит и Гатол. Это знание осталось внутри поселений Примо, и они начали искать решение, чтобы не погибнуть.
+Новарион и Примо занимались изысканиями - Новарион пытался найти способ обратить Этерисов в Пустоту, а Примо хотели выйти за пределы своих возможностей и достичь "возвышения". В итоге они столкнулись - эксперимент Примо в одном из их городов открыл нестабильный портал в царство Новариона в Пустоте. Это вызвало искажение запасов Хрусталя в столице Примо на Гатоле - он превратился в Скалк (искажённую версию Хрусталя) и зараженные Примо стали Варденами. В итоге все крупные города Примо на Гатоле были заражены Скалком и заброшены.
+Агнар, до этого молча покровительствующий существам, живущим в недрах Гатола, безумно разозлился на весь надземный мир и Новариона за "убийство его любимцев". Не имея способности к насилию из-за Арисы, Агнар начал созывать банды Неистовых в крепости Незера, построенные им специально для орд, что должны уничтожить прочие народы Гатола во имя Огненных Братьев.
+Новарион окончательно приобрёл репутацию зловещего чудовища из Пустоты, которого та поглотила. В действительности же, Новарион желает помочь Хару исправить его ошибки и освободить прочих Этерисов от гнёта их стремлений. Ему просто не везёт, хотя он пытается действовать разумно вопреки тому, как себя вёл Хару. 
+После Катастрофы Скалка Астий с немногими другими Примо (часть из которых была изгнанниками, а части просто повезло оказаться в нужное время не под землёй) сформировали коалицию, названную позже Первой Империей с Астием в качестве императора. Прежде всего, Примо заключили договор с Мардуком, по которому имперцы выдают Этерисам вещание апокалипсиса от Анихилона (погибшего от Скалка) и обязуются увеличивать население Веритов, а тот в обмен делает всё, чтобы ни один Примо не погиб при жертвоприношении для Хару.
+Общество Веритов сформировалось следующим образом - Склавы построили по всему исследованному Гатолу города и железные дороги и сами же их населили в виде фермеров, шахтёров, простых рабочих. Они не имеют амбиций, но имеют потребности в еде, комфорте и жилом пространстве. Радитажи стали ремесленниками, торговцами, творцами и учёными в этих городах. Поклонение Радитажей Этерисам стало преображать города - начали появляться храмы и тематические районы, в которых жизнь течёт подобно занятиям и ценностям Этерисов. Малочисленные Примо, неспособные к размножению, превратились в знать и живые легенды за счёт способности бесконечно развивать свои таланты. 
+Мардук рассказал остальным Этерисам о том, что произойдёт после смерти Хару, что он узнал от Примо.
+СургиЛурги поняли, что должны разложить тело Хару - Гимпанум на малые фоносомики, что не позволит ему превратиться в звезду. Как санитары леса, они очистят тело отца от Хрусталя, исцелят его эрозию. Но даже если он Хару не вернётся к жизни, то они хотя бы сохранять Гимпанум и предотвратят апокалипсис. Зелёный круг последовал за ними, но это требует времени. 
+Агнар увидел в космической катастрофе возможность для себя - с этого момента он мечтает превратить весь Гимпанум в единый мир из камня космоса, как и требует его стремление. Иными словами, ему нужно приблизить апокалипсис и смерть Хару. Последователи Огненных Братьев - орд Неистовых, вполне себе ему в этом помогут, ведь их ведёт лишь ненависть и жажда разрушения.
+Ариса во главе с Лиловым Кругом так же продолжила свои эксперименты по поднятию Хару в нежизнь - известие об апокалипсисе не поменяло её планов.
+Новарион всегда подслушивал за сиблингами и Веритами с помощью эндерменов, и узнав о будущем апокалипсисе, он ещё больше раскаялся в своих неудачах, из-за которых не может помочь отцу. Но это не сломило его решимости выбраться из Пустоты либо найти себе последователей на Гатоле.
 
+
+
+
+
+%%
 Эпоха Осознания - один из формирующихся протопланетных дисков имел в своём составе большое количество хрусталя, то есть имел при себе массу чистого фоноса. Случайная удачно сложенная фоносомика попала в этот зародыш солнечной системы и начала взрывообразно присоединять в себя материал чистого фоноса, что было сравнимо с очень быстрой кристаллизацией. В результате возникла одна огромная фоносомика, которая, будучи единой массой, смогла не распасться и развиться до состояния осознанности. Так родился Хару, и рождение его звучало как песня [Here Come The Sun](https://youtu.be/KQetemT1sWc?si=YZw521sApU6lelpG). Хару долго осматривался по сторонам, слушал Вселенную, вникал в себя, и понял, что ему нравится слушать музыку - но она есть только в момент рождения и смерти сложной или осознанной фоносомики. Когда космос перестал бурлить и стал тише, Хару осознал, что сам может творить что-то живое, и он попытался сделать то, что будет вечно звучать как музыка, что будет постоянно перетекать от одного состояния к другому, к песочные часы. Таким стал Новарион - его рождение звучало как [Space Coast]([https://www.youtube.com/watch?v=pEQu0rk3300](https://youtu.be/pEQu0rk3300?si=p2GVdLB_Flu0qGI3)), и Новарион действительно был особенным по сравнению с обычными фоносомиками. Он предстал в виде двурукого существа с двумя ёмкостями, он постоянно переливал жидкость из одной ёмкости в другую, и это движение и порождало музыку. Хару был рад, но не долго. Новарион имел собственную волю и осознание себя, и бродить по вселенной ему казалось осмысленнее, чем радовать своего создателя музыкой. Вот тут то Хару и призадумался, стоит ли просто создавать музыку ради музыки...
 
 Эпоха Первоначала - после неудачи с Новарионом Хару логично предположили, что если у его детища будет цель, какая-то материальная функция, то оно будет иметь больше смысла и рождать больше разной музыки. В космосе вокруг Гимпанума множество камней, и идея использовать их как анкеры для фоносомик вылилась в сотворение Агнара. Его рождение звучало как [To Be a Dwarf](https://youtu.be/ykqyLX4PUao?si=eqaKz1AoJXZRX0TQ). Агнар сразу пошёл ЕБАШИТЬ, огромными кулаками он разбивал и снова сжимал камни, превращая их в руды и минералы. Каждый кусочек руды формировал за собой фоносомику, а обилие таких фоносомик порождало музыку, постоянную и имеющую смысл, как казалось Хару. Со временем Агнар собрал целую планету - будущий Верхний мир - где-то на орбите Гимпанума, он возвышался над горами в теле каменного гиганта и был един в горячей страсти со своей раскалённой планетой. В то же время Новарион дошёл до края Вселенной и смог выйти в Пустоту, где нет ни вещества ни фоноса, но загадочным образом он смог сделать его своей обителью.
 
 Эпоха Цветения - Агнар дробил камень, плавил его в лаву и образовывал руды, и делал это как будто бесконечно. Это была музыка, звучный и хороший рок, но она была как заевшая пластинка, и Хару был лишь слегка опечален этой неудачей, он сразу попробовал разнообразить это. Чтобы на горячем камне появилось что-то новое и заодно что-то не однообразное, Хару сотворил дуалистическую сущность, циклично меняющуюся. Она сразу распалась на два анкера (будучи при этом одной фоносомикой), которые взяли себе имена Сурги и Лурги. Они звучали как [Cuckoo Song](https://www.youtube.com/watch?v=cbQyFZmuA58)и ступали по планете Агнара. Камень под их ногами остужался, размягчался, становился дёрном, из которого всходили растения и грибы. Сурги и Лурги, две фигуры в балахонах, слепили из грязи животных и, не сговариваясь, стали поочерёдно нести службу на небе, Сурги в качестве солнца, а Лурги в качестве луны. Они как Инь и Ян, Сурги - Ян, Лурги - Инь. Пока Лурги на небе, Сурги строит деревни, создаёт животных, усмиряет огонь. Пока Сурги на небе, Лурги строит подземелья, выращивает мох и грибы, даёт воде путь из камня. Всё это создавалось, естественно, с сопутствующими каждой маленькой букашке и травинке фоносомиками, поэтому музыка была прекрасной, что радовало Хару. Но Агнару это всё не нравилось - его пылающую, источающую жар игрушку испортили, и он объявил войну своим младшим братьям. Она выражалась в планомерном уничтожении их деяний - поля превращались в пустыни, леса в пустоши, и звучало это всё не очень мелодично. Для близнецов это было проблемой - в разрушенных биомах было трудно создавать жизнь, но невозможно. Назло Агнару Лурги разливал океаны, которые замедляли огненного гиганта, а Сурги заселял даже безжизненные пустыни. Впрочем, Агнара это не останавливало. И их борьба продолжалась долго, не приближая ни одну из сторон к победе, пока Хару не понял, что взаимное разрушение - та же заевшая пластинка, но только хуже, потому что нет гармонии, лишь какофония. Чтобы братья сосуществовали, а не враждовали, Хару впервые создал что-то не для создания музыки, а для исправления "своих ошибок". Ни Агнар, ни близнецы не замечали красот того мира, который сотворили по сути общими силами, и поэтому Хару создал ослепительную и завораживающую Арису. С песней [One Way Ticket](https://youtu.be/3wwVO-N0hwc?si=Yay-PCn2l-ZUvlr5) она пришла на земли Верхнего мира полупрозрачным образом, и искрами осветила пейзажи. Путешествуя по прекрасному миру, она видела фоносомики уже создала и создавала на их основе собственные, причудливым образом их меняя - так родилась магия. На удивление, это действительно помогло примирить братьев. Все втроём увидели гармонию в их общем мире и перестали враждовать - полюбили они и сестру свою и друг друга, стали жить дружно как семья.
-
-Эпоха Проклятия - 
-
-Эпоха Увядания - 
-
-Эпоха Смелости -
